# nautilus_trader

./: '  .codecov.yml  .codespellrc  .coveragerc  .darglint  .deepsource.toml  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .gitlint  .isort.cfg  .lycheeignore  .markdownlint.jsonc  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .taplo.toml  .typos.toml  .yamlfmt  .yamllint.yaml  .zizmor.yml  3505-issue.md  ADAPTERS.md  AGENTS.md  BENCHMARKING.md  BLUEPRINT.md  Bird  CHANGES.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DYDX_DATA_PLAN.md  DYDX_DATA_TESTING.md  FREQTRADE_COMPATIBILITY.md  Instrument.py  LICENSE.md  MANIFEST.in  (+51 more)
crates/: Cargo.toml  LICENSE  README.md  lib.rs
crates/adapters/architect_ax/: Cargo.toml  README.md
crates/adapters/asterdex2/: Cargo.toml  README.md
crates/adapters/betfair/: Cargo.toml  README.md
crates/adapters/binance/: Cargo.toml  README.md
crates/adapters/bitget/: Cargo.toml  README.md
crates/adapters/bitmex/: Cargo.toml  README.md
crates/adapters/blockchain/: Cargo.toml  README.md
crates/adapters/bullet/: Cargo.toml
crates/adapters/bybit/: Cargo.toml  README.md
crates/adapters/coinbase/: Cargo.toml  DOCUMENTATION.md  LICENSE  README.md
crates/adapters/coinbase_intx/: Cargo.toml  README.md
crates/adapters/cryptohftdata/: Cargo.toml  README.md
crates/adapters/databento/: Cargo.toml  README.md  publishers.json
crates/adapters/delta_exchange/: Cargo.toml  README.md
crates/adapters/demo/: Cargo.toml
crates/adapters/deribit/: Cargo.toml  README.md
crates/adapters/derive/: Cargo.toml
crates/adapters/dydx/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
crates/adapters/gateio2/: Cargo.toml  README.md
crates/adapters/hyperliquid/: Cargo.toml  README.md
crates/adapters/hyperliquid2/: Cargo.toml  README.md
crates/adapters/interactive_brokers/: Cargo.toml  README.md
crates/adapters/kalshi/: Cargo.toml
crates/adapters/kraken/: Cargo.toml  README.md
crates/adapters/lighter/: .gitignore  Cargo.toml  README.md
crates/adapters/lighter2/: Cargo.toml  README.md
crates/adapters/okx/: Cargo.toml  README.md
crates/adapters/polymarket/: Cargo.toml  README.md
crates/adapters/rithmic/: Cargo.toml
crates/adapters/sandbox/: Cargo.toml  README.md
crates/adapters/tardis/: Cargo.toml  README.md
crates/agent_swarm/: Cargo.toml
crates/agent_swarm/src/: agent.rs  compiler.rs  intent.rs  lib.rs  swarm.rs
crates/analysis/: Cargo.toml  README.md
crates/analysis/src/: analyzer.rs  lib.rs  snapshot.rs  statistic.rs
crates/autoresearch/: Cargo.toml
crates/autoresearch/src/: lib.rs  metric.rs  micro_backtest.rs  runtime.rs
crates/backtest/: Cargo.toml  README.md  build.rs  cbindgen.toml  cbindgen_cython.toml
crates/backtest/benches/: engine.rs
crates/backtest/examples/: ema_cross.rs  engine_ema_cross.rs  node_ema_cross.rs  tardis_option_chain.rs
crates/backtest/src/: accumulator.rs  config.rs  data_client.rs  data_iterator.rs  engine.rs  exchange.rs  execution_client.rs  lib.rs  node.rs  result.rs  runner.rs
crates/bun/: Cargo.toml
crates/bun/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/common/: Cargo.toml  README.md  build.rs  cbindgen.toml  cbindgen_cython.toml
crates/core/: Cargo.toml  README.md  build.rs  cbindgen.toml  cbindgen_cython.toml
crates/cryptography/: Cargo.toml  README.md
crates/data/: Cargo.toml  README.md
crates/event_store/: Cargo.toml  README.md
crates/execution/: Cargo.toml  README.md
crates/indicators/: Cargo.toml  README.md
crates/infrastructure/: Cargo.toml  README.md  TESTS.md
crates/live/: Cargo.toml  README.md
crates/model/: Cargo.toml  README.md  build.rs  cbindgen.toml  cbindgen_cython.toml
crates/nautilus_macros/: Cargo.toml
crates/network/: Cargo.toml  README.md
crates/persistence/: Cargo.toml  README.md
crates/plugin/: Cargo.toml  README.md  build.rs
crates/portfolio/: Cargo.toml  README.md
crates/pyo3/: Cargo.toml  README.md
crates/reputation/: Cargo.toml
crates/risk/: Cargo.toml  README.md
crates/risk_potential/: Cargo.toml
crates/serialization/: Cargo.toml  README.md  build.rs
crates/src/: lib.rs
crates/state_encoder/: Cargo.toml
crates/system/: Cargo.toml  README.md
crates/test_kit/: Cargo.toml  README.md
crates/testkit/: Cargo.toml  README.md
crates/trading/: Cargo.toml  README.md
crates/xtask/: Cargo.toml
nautilus_core/: .clippy.toml  .rustfmt.toml  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
nautilus_core/.cargo/: config.toml
nautilus_core/.config/: nextest.toml
nautilus_core/accounting/: Cargo.toml
nautilus_core/adapters/: Cargo.toml
nautilus_core/algorithms/: Cargo.toml  build.rs  cbindgen.toml  cbindgen_cython.toml
nautilus_core/analysis/: Cargo.toml
nautilus_core/backtest/: Cargo.toml  build.rs  cbindgen_cython.toml
nautilus_core/catalog/: Cargo.toml  build.rs
nautilus_core/cli/: Cargo.toml
nautilus_core/common/: Cargo.toml  build.rs  cbindgen.toml  cbindgen_cython.toml  common.h
nautilus_core/core/: Cargo.toml  build.rs  cbindgen.toml  cbindgen_cython.toml
nautilus_core/cryptography/: Cargo.toml
nautilus_core/data/: Cargo.toml
nautilus_core/doc/: .rustc_info.json  .rustdoc_fingerprint.json
nautilus_core/execution/: Cargo.toml
nautilus_core/indicators/: Cargo.toml
nautilus_core/infrastructure/: Cargo.toml
nautilus_core/lib/: ws2_32.lib
nautilus_core/model/: Cargo.toml  build.rs  cbindgen.toml  cbindgen_cython.toml  model.h
nautilus_core/network/: Cargo.toml
nautilus_core/persistence/: Cargo.toml  build.rs  cbindgen.toml  cbindgen_cython.toml
nautilus_core/portfolio/: Cargo.toml
nautilus_core/pyo3/: Cargo.toml
nautilus_core/risk/: Cargo.toml
nautilus_core/serialization/: Cargo.toml
nautilus_core/test_kit/: Cargo.toml
python/: README.md  generate_docstrings.py  generate_stubs.py  pyproject.toml
python/examples/: README.md
python/nautilus_trader/: __init__.py  __init__.pyi  _fixup.py
python/tests/: conftest.py  providers.py  stubs.py  test_indicators_mfi.py
(+15873 files in other folders)
