[workspace]
resolver = "2"
members = [
  "crates",
  "crates/adapters/bitmex",
  "crates/adapters/blockchain",
  "crates/adapters/bybit",
  "crates/adapters/coinbase_intx",
  "crates/adapters/databento",
  "crates/adapters/dydx",
  "crates/adapters/hyperliquid",
  "crates/adapters/kraken",
  "crates/adapters/okx",
  "crates/adapters/tardis",
  "crates/analysis",
  "crates/backtest",
  "crates/cli",
  "crates/common",
  "crates/core",
  "crates/cryptography",
  "crates/data",
  "crates/execution",
  "crates/indicators",
  "crates/infrastructure",
  "crates/live",
  "crates/model",
  "crates/network",
  "crates/persistence",
  "crates/portfolio",
  "crates/pyo3",
  "crates/risk",
  "crates/serialization",
  "crates/system",
  "crates/testkit",
  "crates/trading",
]

[workspace.package]
version = "0.52.0"
edition = "2024"
rust-version = "1.91.1"
authors = ["Nautech Systems <info@nautechsystems.io>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
description = "A high-performance algorithmic trading platform and event-driven backtester"
categories = ["finance", "simulation", "asynchronous"]
keywords = [
  "finance",
  "trading",
  "trading-platform",
  "algorithmic-trading",
  "quantitative-finance",
]
documentation = "https://nautilustrader.io/docs"
repository = "https://github.com/nautechsystems/nautilus_trader"
homepage = "https://nautilustrader.io"

[workspace.dependencies]
nautilus-analysis = { path = "crates/analysis", version = "0.52.0" }
nautilus-backtest = { path = "crates/backtest", version = "0.52.0" }
nautilus-cli = { path = "crates/cli", version = "0.52.0" }
nautilus-common = { path = "crates/common", version = "0.52.0" }
nautilus-core = { path = "crates/core", version = "0.52.0" }
nautilus-cryptography = { path = "crates/cryptography", version = "0.52.0" }
nautilus-data = { path = "crates/data", version = "0.52.0" }
nautilus-execution = { path = "crates/execution", version = "0.52.0" }
nautilus-indicators = { path = "crates/indicators", version = "0.52.0" }
nautilus-infrastructure = { path = "crates/infrastructure", version = "0.52.0" }
nautilus-live = { path = "crates/live", version = "0.52.0" }
nautilus-model = { path = "crates/model", version = "0.52.0" }
nautilus-network = { path = "crates/network", version = "0.52.0" }
nautilus-persistence = { path = "crates/persistence", version = "0.52.0" }
nautilus-portfolio = { path = "crates/portfolio", version = "0.52.0" }
nautilus-pyo3 = { path = "crates/pyo3", version = "0.52.0" }
nautilus-risk = { path = "crates/risk", version = "0.52.0" }
nautilus-serialization = { path = "crates/serialization", version = "0.52.0" }
nautilus-system = { path = "crates/system", version = "0.52.0" }
nautilus-testkit = { path = "crates/testkit", version = "0.52.0" }
nautilus-trading = { path = "crates/trading", version = "0.52.0" }

# -----------------------------------------------------------------------------
# Adapters
# -----------------------------------------------------------------------------
nautilus-blockchain = { path = "crates/adapters/blockchain", version = "0.52.0" }
nautilus-bybit = { path = "crates/adapters/bybit", version = "0.52.0" }
nautilus-coinbase-intx = { path = "crates/adapters/coinbase_intx", version = "0.52.0" }
nautilus-bitmex = { path = "crates/adapters/bitmex", version = "0.52.0" }
nautilus-databento = { path = "crates/adapters/databento", version = "0.52.0" }
nautilus-dydx = { path = "crates/adapters/dydx", version = "0.52.0" }
nautilus-hyperliquid = { path = "crates/adapters/hyperliquid", version = "0.52.0" }
nautilus-kraken = { path = "crates/adapters/kraken", version = "0.52.0" }
nautilus-okx = { path = "crates/adapters/okx", version = "0.52.0" }
nautilus-tardis = { path = "crates/adapters/tardis", version = "0.52.0" }

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------
ahash = "0.8.12"
alloy = { version = "1.1.2", default-features = false, features = [
  "sol-types",
  "contract",
] }
alloy-primitives = { version = "1.4.1", features = ["serde"] }
alloy-signer = { version = "1.1.2", default-features = false }
alloy-signer-local = { version = "1.1.2", default-features = false, features = [
  "mnemonic",
] }
anyhow = "1.0.100"
arc-swap = "1.7.1"
arraydeque = "0.5.1"
# Keep arrow major version in line with datafusion
arrow = { version = "57.1.0", default-features = false, features = [
  "csv",
  "json",
  "ipc",
] }
async-stream = "0.3.6"
async-trait = "0.1.89"
aws-lc-rs = { version = "1.15.1", default-features = false, features = [
  "non-fips",
] }
base64 = "0.22.1"
binary-heap-plus = "0.5.0"
bip32 = "0.5.3"
bytes = { version = "1.11.0", features = ["serde"] }
capnp = "0.23.0"
chrono = { version = "0.4.42", default-features = false, features = [
  "serde",
  "std",
  "clock",
] }
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive", "env"] }
compare = "0.1.0"
cosmrs = { version = "0.22.0", default-features = false, features = ["bip32"] }
csv = "1.4.0"
dashmap = "6.1.0"
databento = { version = "0.36.0", default-features = false, features = [
  "historical",
  "live",
] }
datafusion = { version = "51.0.0", default-features = false, features = [
  "parquet",
  "regex_expressions",
  "unicode_expressions",
  "sql",
] }
deranged = "0.5.5"
derive_builder = { version = "0.20.2", default-features = false, features = [
  "alloc",
] }
dotenvy = "0.15.7"
dydx-proto = "0.4.0"
ed25519-dalek = "2.2.0"
enum_dispatch = "0.3.13"
evalexpr = "=11.3.1" # Pinned to v11.3.1 for MIT licensing
fallible-streaming-iterator = "0.1.9"
flate2 = "1.1.5"
futures = { version = "0.3.31", default-features = false, features = [
  "std",
  "async-await",
] }
futures-util = "0.3.31"
heck = "0.5.0"
hex = "0.4.3"
hostname = "0.4.1"
http = "1.4.0"
hypersync-client = { version = "0.22.0" }
hypersync-schema = { version = "0.3.1" }
implied-vol = { version = "2.0.0" }
indexmap = { version = "2.12.1", features = ["serde"] }
itertools = "0.14.0"
itoa = "1.0.15"
log = { version = "0.4.28", features = [
  "std",
  "kv_unstable",
  "serde",
  "release_max_level_debug",
] }
memchr = "2.7.6"
nonzero_ext = "0.3.0"
object_store = { version = "0.12.4", default-features = false, features = [
  "fs",
  "aws",
  "azure",
  "gcp",
  "http",
] }
# Keep parquet major version in line with datafusion
parquet = { version = "57.1.0", default-features = false, features = [
  "arrow",
  "async",
] }
pem = "3.0.6"
prost = { version = "0.14.1", default-features = false, features = ["std"] }
prost-types = "0.14.1"
pyo3 = { version = "0.27.1", default-features = false, features = [
  "chrono",
  "hashbrown",
  "indexmap",
  "macros",
  "rust_decimal",
  "serde",
] }
pyo3-async-runtimes = { version = "0.27.0", default-features = false, features = [
  "attributes",
  "tokio",
  "tokio-runtime",
] }
pyo3-stub-gen = "0.16.1"
rand = { version = "0.9.2", default-features = false, features = [
  "std",
  "thread_rng",
] }
redis = { version = "0.32.7", features = [
  "connection-manager",
  "keep-alive",
  "sentinel",
  "streams",
  "tokio-comp",
  "tokio-rustls-comp",
  "tls-rustls",
  "tls-rustls-webpki-roots",
] }
regex = { version = "1.12.2", default-features = false, features = [
  "std",
  "perf",
  "unicode-perl",
] }
reqwest = { version = "0.12.24", default-features = false, features = [
  "blocking",
  "rustls-tls",
  "stream",
  "json",
] }
rmp-serde = "1.3.0"
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
rustls = { version = "0.23.35", default-features = false, features = [
  "aws-lc-rs",
  "std",
] }
rustls-pemfile = "2.2.0"
ryu = "1.0.20"
semver = "1.0.27"
serde = { version = "1.0.228", default-features = false, features = [
  "derive",
  "std",
  "rc",
] }
serde_json = { version = "1.0.145", default-features = false, features = [
  "std",
] }
serde_repr = "0.1.20"
serde_urlencoded = "0.7.1"
serde_with = "3.16.0"
simple_logger = "5.1.0"
static_assertions = "1.1.0"
sqlx = { version = "0.8.6", default-features = false, features = [
  "postgres",
  "runtime-tokio",
  "json",
  "derive",
  "rust_decimal",
] }
strum = { version = "0.27.2", features = ["derive"] }
sysinfo = { version = "0.37.2", default-features = false, features = [
  "system",
] }
tabled = { version = "0.20.0", default-features = false, features = [
  "std",
  "derive",
] }
thiserror = "2.0.17"
thousands = "0.2.0"
time = { version = "0.3.44", default-features = false, features = [
  "macros",
  "parsing",
  "serde",
  "std",
] }
tokio = { version = "1.48.0", default-features = false, features = [
  "rt-multi-thread",
  "sync",
  "fs",
  "io-util",
  "net",
  "time",
  "macros",
  "signal",
] }
tokio-rustls = "0.26.4"
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", features = [
  "rustls-tls-webpki-roots",
] }
tokio-util = { version = "0.7.17", default-features = false, features = ["io"] }
tonic = { version = "0.14.2", default-features = false, features = [
  "channel",
  "tls-aws-lc",
  "tls-webpki-roots",
] }
toml = { version = "0.9.8", default-features = false, features = [
  "parse",
  "serde",
] }
tracing = { version = "0.1.41", default-features = false, features = [
  "std",
  "attributes",
] }
# Disable default feature "tracing-log" since it interferes with custom logging
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
  "smallvec",
  "fmt",
  "ansi",
  "std",
  "env-filter",
  "registry",
] }
unbounded-interval-tree = { version = "1.1.2", default-features = false }
url = { version = "2.5.7", default-features = false }
urlencoding = "2.1.3"
ustr = { version = "1.1.0", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
webpki-roots = "1.0.4"
zeroize = { version = "1.8.2", features = ["alloc", "zeroize_derive"] }

# -----------------------------------------------------------------------------
# Dev dependencies
# -----------------------------------------------------------------------------
axum = { version = "0.8.7", default-features = false, features = [
  "tokio",
  "http1",
  "json",
  "query",
  "ws",
] }
criterion = "0.7.0"
http-body-util = "0.1.3"
iai = "0.1.1"
pretty_assertions = "1.4.1"
proptest = "1.9.0"
rstest = "0.26.1"
tempfile = "3.23.0"
tracing-test = "0.2.5"
turmoil = "0.7.0"

# -----------------------------------------------------------------------------
# Build dependencies
# -----------------------------------------------------------------------------
capnpc = "0.23.2"
cbindgen = "0.29.2"
walkdir = "2.5.0"

# -----------------------------------------------------------------------------
# Tools (for cargo install, used by Makefile and CI)
# -----------------------------------------------------------------------------
[workspace.metadata.tools]
cargo-audit = "0.22.0"
cargo-deny = "0.18.6"
cargo-llvm-cov = "0.6.21"
cargo-nextest = "0.9.114"
lychee = "0.21.0"

# -----------------------------------------------------------------------------
# Profiles
# -----------------------------------------------------------------------------
[profile.dev]
opt-level = 0
debug = false # Improves compile times
debug-assertions = false # Fails Cython build if true
overflow-checks = true
strip = "debuginfo" # Improves compile times
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.debug-pyo3]
inherits = "dev"
debug = true # Enable debug symbols for debugging
strip = false # Keep debug symbols for debugging

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
strip = false
lto = false
incremental = true
codegen-units = 256

[profile.nextest]
inherits = "test"
debug = false # Improves compile times
strip = "debuginfo" # Improves compile times

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
strip = "symbols"
panic = "abort"
incremental = false
codegen-units = 1

[profile.release-debugging]
inherits = "release"
incremental = true
debug = "full"
strip = false
lto = false

# -----------------------------------------------------------------------------
# Benchmarks
# -----------------------------------------------------------------------------
# Criterion/iai benchmarks should retain debug symbols so that tools like
# `cargo flamegraph` or `perf` produce human-readable stack traces.  We inherit
# from the `release-debugging` profile defined above which keeps optimisation
# level 3 but preserves symbols and disables LTO for faster compile times.
# -----------------------------------------------------------------------------

[profile.bench]
inherits = "release"
debug = "full"
strip = false
lto = false
incremental = true

# -----------------------------------------------------------------------------
# Workspace lints
# -----------------------------------------------------------------------------
# Centralized lint configuration for all workspace crates.
# Individual crates inherit these with: [lints] workspace = true
#
# These lints are auto-fixable and enforced in pre-commit hooks.
# Run `make clippy-fix` to auto-fix most issues.
#
# Additional non-auto-fixable lints (todo, unwrap_used, expect_used) are
# available via the `make clippy-fix-nightly` target.
# -----------------------------------------------------------------------------

[workspace.lints.clippy]
# Debug markers
dbg_macro = "warn"

# Performance optimizations
redundant_clone = "warn"
unnecessary_to_owned = "warn"
inefficient_to_string = "warn"
needless_borrow = "warn"
cloned_instead_of_copied = "warn"

# Code simplification
redundant_closure = "warn"
needless_return = "warn"
collapsible_if = "warn"
useless_conversion = "warn"

# Style/idioms
use_self = "warn"
redundant_field_names = "warn"
match_like_matches_macro = "warn"
manual_map = "warn"

# Pedantic (explicitness and clarity)
semicolon_if_nothing_returned = "warn"
unnested_or_patterns = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
map_unwrap_or = "warn"
implicit_clone = "warn"

# Security and robustness
suspicious_doc_comments = "warn"
large_stack_arrays = "warn"
panic_in_result_fn = "warn"

# TODO: Enable these incrementally (widespread usage in codebase)
# unwrap_used = "warn"        # Forces explicit error handling instead of panics
# expect_used = "warn"        # Forces explicit error handling instead of panics
# indexing_slicing = "warn"   # Prevents panics from out-of-bounds access
